# SuffixStructures

./: README.md  SuffixStructures.cabal  changelog  changelog.md
Data/SuffixStructure/: ESA.hs  NaiveArray.hs
src/: SAperformance.hs  mkesa.hs
