name:           SuffixStructures
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2014
copyright:      Christian Hoener zu Siederdissen, 2014
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Data, Data Structures
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
synopsis:
                Suffix array construction
description:
                Suffix array construction in Haskell



Extra-Source-Files:

library
  build-depends:
    bytestring        == 0.10.*   ,
    primitive         == 0.5.*    ,
    vector            == 0.10.*   ,
    vector-algorithms == 0.6.*    ,
    base              == 4.*
  exposed-modules:
    Data.SuffixStructure.NaiveArray
  ghc-options:
    -O2 -funbox-strict-fields

executable SAperformance
  build-depends:
    bytestring        == 0.10.*   ,
    cmdargs           == 0.10.*   ,
    criterion         == 0.8.*    ,
    deepseq           == 1.3.*    ,
    mwc-random        == 0.13.*   ,
    primitive         == 0.5.*    ,
    SuffixStructures              ,
    vector            == 0.10.*   ,
    vector-algorithms == 0.6.*    ,
    base        == 4.*
  main-is:
    src/SAperformance.hs
  ghc-options:
    -O2 -fllvm -optlo-O3 -optlo-std-compile-opts



source-repository head
  type: git
  location: git://github.com/choener/OrderedBits

