name:           SuffixStructures
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2014
copyright:      Christian Hoener zu Siederdissen, 2014
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Data, Data Structures
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
synopsis:
                Suffix array construction
description:
                Suffix array construction in Haskell



Extra-Source-Files:

flag criterion
  description: build criterion benchmark
  default: False
  manual:  True

library
  build-depends:
    binary                  == 0.7.*    ,
    bytestring              == 0.10.*   ,
    cereal                  == 0.4.*    ,
    containers              == 0.5.*    ,
    ListLike                == 4.1.*    ,
    primitive               == 0.5.*    ,
    vector                  == 0.10.*   ,
    vector-algorithms       == 0.6.*    ,
    vector-binary-instances == 0.2.*    ,
    base                    == 4.*
  exposed-modules:
    Data.SuffixStructure.NaiveArray
    Data.SuffixStructure.ESA
  ghc-options:
    -O2 -funbox-strict-fields

executable mkesa
  build-depends:
    binary                  == 0.7.*    ,
    bytestring              == 0.10.*   ,
    cereal                  == 0.4.*    ,
    cmdargs                 == 0.10.*   ,
    containers              == 0.5.*    ,
    deepseq                 == 1.3.*    ,
    ListLike                == 4.1.*    ,
    primitive               == 0.5.*    ,
    vector                  == 0.10.*   ,
    vector-algorithms       == 0.6.*    ,
    vector-binary-instances == 0.2.*    ,
    base                    == 4.*
  main-is:
    src/mkesa.hs
  ghc-options:
    -O2 -funbox-strict-fields -fllvm -optlo-O3 -optlo-std-compile-opts

executable SAperformance
  if flag(criterion)
    buildable: True
  else
    buildable: False
  build-depends:
    bytestring        == 0.10.*   ,
    cmdargs           == 0.10.*   ,
    containers        == 0.5.*    ,
    criterion         == 0.8.*    ,
    deepseq           == 1.3.*    ,
    ListLike          == 4.1.*    ,
    mwc-random        == 0.13.*   ,
    primitive         == 0.5.*    ,
    vector            == 0.10.*   ,
    vector-algorithms == 0.6.*    ,
    base              == 4.*
  main-is:
    src/SAperformance.hs
  ghc-options:
    -O2 -funbox-strict-fields -fllvm -optlo-O3 -optlo-std-compile-opts



source-repository head
  type: git
  location: git://github.com/choener/OrderedBits

